exports[`test Changes status on value change 1`] = `
<Select
  autoFocus={false}
  defaultItem=""
  defaultRequired=""
  disabled={false}
  error={null}
  errorSubInfo={null}
  id="select"
  inputStyle="inline"
  isRequired={true}
  items={
    Object {
      "option": "Option",
      "option-2": "Option 2",
      "option-3": "Option 3",
    }
  }
  labelHidden={false}
  name="select"
  onChange={null}
  query={Object {}}
  reference={[Function]}
  requiredLabel=""
  title="Select"
  value="option">
  <div
    className="formGroup inline">
    <label
      className="controlLabel"
      htmlFor="select">
      Select
    </label>
    <div
      className="inputContainer">
      <select
        autoFocus={false}
        className="formControl select "
        disabled={false}
        id="select"
        name="select"
        onChange={[Function]}
        required={true}
        value="option-2">
        <option
          value="option">
          Option
        </option>
        <option
          value="option-2">
          Option 2
        </option>
        <option
          value="option-3">
          Option 3
        </option>
      </select>
    </div>
  </div>
</Select>
`;

exports[`test Renders Select with an error message without crashing 1`] = `
<div
  className="formGroup inline">
  
  <label
    className="controlLabel controlLabelError"
    htmlFor="select">
    Select
  </label>
  <div
    className="inputContainer">
    <select
      autoFocus={false}
      className="formControl select formControlError"
      disabled={false}
      id="select"
      name="select"
      onChange={[Function]}
      required={true}
      value="option">
      
      
      <option
        value="option">
        Option
      </option>
      <option
        value="option-2">
        Option 2
      </option>
      <option
        value="option-3">
        Option 3
      </option>
    </select>
    <span
      className="error">
      <strong
        className="info">
        An Error
      </strong>
      with useful hints
    </span>
  </div>
</div>
`;

exports[`test Renders Select without crashing 1`] = `
<div
  className="formGroup inline">
  
  <label
    className="controlLabel"
    htmlFor="select">
    Select
  </label>
  <div
    className="inputContainer">
    <select
      autoFocus={false}
      className="formControl select "
      disabled={false}
      id="select"
      name="select"
      onChange={[Function]}
      required={true}
      value="option">
      
      
      <option
        value="option">
        Option
      </option>
      <option
        value="option-2">
        Option 2
      </option>
      <option
        value="option-3">
        Option 3
      </option>
    </select>
  </div>
</div>
`;
